--- a/Milestone11/cross_dataset.ipynb
+++ b/Milestone11/cross_dataset.ipynb
@@ -136,58 +136,12 @@
    "metadata": {},
    "source": [
     "-- Query 2 --\n",
-    "-- This query's expected results would be to get the average passing completion percentage of each player when the wind was greater than 20 MPH. "
+    "-- This query's expected results would be to get the average passing yards of QBs when playing in a covered stadium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing query with job ID: c069c630-d76c-40b5-9939-160a23eec983\n",
-      "Query executing: 0.30s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ERROR:\n",
-      " 409 GET https://bigquery.googleapis.com/bigquery/v2/projects/airy-lodge-252816/queries/c069c630-d76c-40b5-9939-160a23eec983?timeoutMs=400&location=US&maxResults=0: Already Exists: Table airy-lodge-252816:reporting.v_passing_completion_in_wind\n",
-      "\n",
-      "(job ID: c069c630-d76c-40b5-9939-160a23eec983)\n",
-      "\n",
-      "                                                                          -----Query Job SQL Follows-----                                                                          \n",
-      "\n",
-      "    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |\n",
-      "   1:create view reporting.v_passing_completion_in_wind as\n",
-      "   2:select a.player_id, round(avg(a.completion_percentage), 2) as avg_completion_percentage\n",
-      "   3:from `airy-lodge-252816.nfl_stats_modeled.Quarterback_Game_Logs_Beam_DF` a join `airy-lodge-252816.nfl_weather_modeled.spreadspoke_scores` b on a.game_date = b.schedule_date \n",
-      "   4:where a.year = b.schedule_season\n",
-      "   5:and  b.weather_wind_mph > 20.0\n",
-      "   6:group by a.player_id\n",
-      "    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |    .    |\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bigquery\n",
-    "create view reporting.v_passing_completion_in_wind as\n",
-    "select a.player_id, round(avg(a.completion_percentage), 2) as avg_completion_percentage\n",
-    "from `airy-lodge-252816.nfl_stats_modeled.Quarterback_Game_Logs_Beam_DF` a join `airy-lodge-252816.nfl_weather_modeled.spreadspoke_scores` b on a.game_date = b.schedule_date \n",
-    "where a.year = b.schedule_season\n",
-    "and  b.weather_wind_mph > 20.0\n",
-    "group by a.player_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,31 +165,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>f0_</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>378</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   f0_\n",
-       "0  378"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%bigquery\n",
-    "select count(*) from reporting.v_passing_completion_in_wind"
+    "create view reporting.v_average_passing_yards_in_dome as\n",
+    "select q.player_id, avg(passing_yards) as avg_passing_yards\n",
+    "from `airy-lodge-252816.nfl_stats_modeled.Quarterback_Game_Logs_Beam_DF` as q join `airy-lodge-252816.nfl_weather_modeled.spreadspoke_scores` as s on q.game_date = s.schedule_date\n",
+    "where s.weather_detail = \"DOME\"\n",
+    "group by q.player_id\n",
+    "order by avg_passing_yards desc"
    ]
   },
   {
